<resources>
    <string name="app_name">OneTapSOS</string>
    <string name="onetapsos">OneTapSOS</string>
    <string name="gps_fetching_location">GPS: Fetching location.....</string>
    <string name="send_button">Send button</string>
    <string name="type_emergency_here">Type emergency here…</string>
    <string name="record_button">Record button</string>
    <string name="press_the_button_to_record_the_audio">Press the button to record the audio</string>
    <string name="one_tap_sos">One-Tap SOS</string>
    <string name="menu_icon">menu_icon</string>
    <string name="gps_status_none">GPS Status: None</string>
    <string name="record">record</string>
    <string name="gps_status_non">GPS Status: None</string>
    <string name="send_message">Send Message</string>
    <string name="account_status_registered_ncalls_available_unlimited">Account Status: Registered\nCalls Available: Unlimited</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="back_to_home">Back to Home</string>
    <string name="network_status_unknown" />
    <string name="calls_available_unlimited" />
    <string name="open_settings" />
    <string name="instruction_text" />
    <string name="start_recording" />
    <string name="send_emergency" />
    <string name="gps_status_unknown" />
    <string name="account_status_registered" />

    <string name="gps_status_enabled">GPS Status: Enabled</string>
    <string name="gps_status_disabled">GPS Status: Disabled</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="unable_to_find_address">Unable to find address</string>
    <string name="location_label">Location: %1$s</string>
    <string name="record_instruction">Press the button to record the audio</string>
    <string name="account_registration">Account Registration</string>
    <string name="register_using_google">Register using Google?</string>
    <string name="press_button_instruction" />
    <string name="settings">Settings</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="need_create"><u>Need to create an account?</u></string>
    <string name="edit_account"><u>Edit Account?</u></string>


</resources>